--- a/browser/package.json
+++ b/browser/package.json
@@ -17,7 +17,7 @@
     "stylelint": "stylelint 'src/**/*.scss'",
     "clean": "rm -rf build/ dist/ *.zip *.xpi .checksum",
     "test": "jest --testPathIgnorePatterns e2e",
-    "test-e2e": "jest --coverage=false chrome.e2e",
+    "test-chrome-e2e": "jest --coverage=false chrome.e2e",
     "test-phabricator-e2e": "jest --coverage=false phabricator.e2e"
   },
   "browserslist": [
