--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "@types/webpack": "4.4.31",
     "@types/webpack-dev-server": "3.1.5",
     "@types/whatwg-url": "6.4.0",
+    "@zeus-ci/cli": "^0.5.4",
     "autoprefixer": "^9.5.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-lodash": "^3.3.4",
